--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="game.css">
+<link rel="stylesheet" type="text/css" href="CSS/game.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="//davidshimjs.github.com/qrcodejs/qrcode.min.js"></script>
 <script src = "/socket.io/socket.io.js"></script>
@@ -16,9 +16,7 @@
 <script src="script.js"></script>
 
 
-<audio autoplay loop>
- <source src="FireIn.mp3" type="audio/mp3">
-</audio>
+
 
 <head>
   <meta charset="utf-8">
@@ -30,11 +28,9 @@
 
 <div class="menu" id="mainMenu">
   <div class="title">
-    TITOLO DEL GIOCO
+    PROGETTO PI
   </div>
-  <div onclick="stopMusic()" class="music">
-    Stop Music
-  </div>
+  
   <div class="options" onclick="chooseMode()" style="margin-top:210px">
     AVVIO
   </div>
